[package]
name = "steam-auth"
authors = ["Matt Taylor"]
version = "1.0.0"
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Allows you to implement a 'login with steam' feature on your website."
repository = "https://github.com/64/steam-auth"
documentation = "https://docs.rs/steam-auth"
keywords = ["steam", "login", "authentication", "authenticate", "openid"]
categories = ["authentication", "asynchronous", "network-programming", "web-programming"]

[dependencies]
reqwest = "0.12.5"
futures = "0.3.30"
url = "2.5.2"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_urlencoded = "0.7.1"
failure = "0.1.8"
http = "1.1.0"

[dev-dependencies]
simple-server = "0.4.0"

[badges]
travis-ci = { repository = "64/steam-auth" }
